# toyllm

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  junit.xml  mkdocs.yml  pyproject.toml
.github/workflows/: build_docs.yaml  python-publish.yml  test.yaml
benchmark/gpt2kv/: benchmark_results.csv
blog/: index.html
changelog/: index.html
docs/: index.md
docs/blog/posts/: about.md
examples/: llm_input_output.py
playground/: mha.ipynb
playground/finetune/: qwen3-0.6B.ipynb
playground/finetune/qwen3-0.6B-tldr-adapter/: adapter_config.json  generation_config.json
playground/finetune/qwen3-0.6B-tldr-adapter/checkpoint-200/: README.md  adapter_config.json  trainer_state.json
playground/glimpse/top-down/: llm_input_output_en.py  llm_input_output_zh.py
search/: search_index.json
tests/: hello.py  test_device.py
toyllm/: __init__.py  dataset.py  device.py
toyllm/cli/: benchmark_gpt2.py  run_gpt2.py  run_gpt2_kv.py  run_speculative_sampling.py
toyllm/core/: __init__.py  _generate.py  _logits.py
toyllm/device/: __init__.py
toyllm/gpt2/: __init__.py  config.py  dataset.py  generate.py  gpt.py  tokenizer.py  train.py
toyllm/gpt2_kv/: __init__.py  generate.py  gpt.py  kv_cache.py
toyllm/gpt2kv/: generate.py  kv_cache.py
toyllm/model/: __init__.py  config.py  generate.py  gpt.py  junit.xml  tokenizer.py  train.py  weight.py
toyllm/sps/: __init__.py  generate.py  models.py
toyllm/util/: timer.py
