[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "toyllm"
version = "0.1.0"
description = "Toy LLM"
keywords=["machine learning", "deep learning", "llm"]
license = {text = "Apache 2.0"}
readme = "README.md"
authors = [
    {name = "Xiangzhuang Shen", email = "datahonor@gmail.com"},
]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">= 3.11,<3.13"
dependencies = [
    "numpy",
    "torch",
    "tiktoken",
    "jaxtyping",
]

[project.optional-dependencies]
dev = [
    "nvitop",
    "pre-commit",
    "ipython",
    "black",
    "flake8",
    "mypy",
    "isort",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "hypothesis>=6.112.0",
    "commitizen",
]
plot = [
    "matplotlib",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "mkdocs-bibtex",
    "mkdocstrings-python",
]

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["toyllm*"]
namespaces = false


[tool.uv]
extra-index-url = ["https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"]

[tool.isort]
profile = "black"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F722"]

[tool.black]
line-length = 120
